update test v2 ibc new version